--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "dotenv": "16.0.3",
     "express": "4.18.2",
     "mysql": "2.18.1",
-    "nodemon": "2.0.20"
+    "nodemon": "2.0.20",
+    "swagger-jsdoc": "6.2.8",
+    "swagger-ui-express": "4.6.0"
   }
 }
